@@ -66,6 +66,11 @@ class NParticleReader : public ParticleReader
 		/// the frameIndex parameter should be set using an index into this IntVectorData
 		const IntVectorData * frameTimes();
 	
+	protected:
+		
+		// Returns the name of the position primVar
+		virtual std::string positionPrimVarName();
+		
 	private:
 		
 		static const ReaderDescription<NParticleReader> m_readerDescription;
