@@ -40,6 +40,8 @@ class TestRenamePrimVar( unittest.TestCase ) :
 	def test( self ) :
 
 		r = IECore.Reader.create( "test/IECore/data/pdcFiles/particleShape1.250.pdc" )
+		r["convertPrimVarNames"].setValue( IECore.BoolData(False) )
+		self.assertFalse( r.parameters()["convertPrimVarNames"].getTypedValue() )
 		p = r.read()
 
 		self.assert_( "position" in p )
